<resources>
    <string name="app_name">QuickList</string>
    <string name="multilist">Мультисписки</string>
    <string name="recipe">Рецепты</string>
    <string name="lists">Списки</string>
    <string name="name_of_multilist">Введите название мультисписка</string>
    <string name="name_of_list">Введите название списка</string>
    <string name="icon">Иконка</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="create">Создать</string>
    <string name="creating_multilist_hint">Создавая мультисписки вы можете хранить свои списки покупок более упорядочено, а так же вы можете делиться мультисписками с друзьями</string>
    <string name="icon_choose_hint">На этом этапе вы можете выбрать иконку своего списка покупок для того что бы визуально отличать его из длинного списка остальных…</string>
    <string name="confirm">Готово</string>
    <string name="color">Цвет</string>
    <string name="color_choose_hint">На этом этапе вы можете выбрать цвет своего списка покупок для того что бы отличать его по цвету от остальных списков.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="generic_title_text">Generic IDP Sign In\nwith Microsoft</string>
    <string name="msft_status_fmt">Microsoft User: %s</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="custom_auth_signin_status_user">User ID: %s</string>
    <string name="custom_auth_signin_status_failed">Error: sign in failed</string>
    <string name="authorization">Авторизация</string>
    <string name="number">+996 777 438 992</string>
    <string name="remember_me">Запомнить меня</string>
    <string name="send_code">Отправить код</string>
    <string name="resend_sms"><u>Отправить SMS код повторно</u></string>
    <string name="register_info">Регистрация не требуется  просто введите номер телефона и дождитесь СМС</string>
    <string name="second">second</string>
    <string name="multilist_created_successfully">Мультисписок успшно создано</string>
    <string name="list_created_successfully">Список успшно создано</string>
    <string name="couldnt_create_multilist">Не удалось создать мультисписок</string>
    <string name="couldnt_create_list">Не удалось создать список</string>

</resources>
