<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo_iv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_logo_155"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/auth_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp"
        app:layout_constraintTop_toBottomOf="@id/logo_iv_login">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/authorization"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/fieldPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_auth"
                android:backgroundTint="@color/blue"
                android:imeOptions="actionDone"
                android:hint="@string/hint_phone_number"
                android:inputType="phone" />

            <EditText
                android:id="@+id/fieldVerificationCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"

                android:layout_below="@id/fieldPhoneNumber"
                android:hint="@string/hint_verification_code"
                android:inputType="number" />

            <Button
                android:id="@+id/buttonStartVerification"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/start_phone_auth" />

            <Button
                android:id="@+id/buttonVerifyPhone"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/verify_phone_auth" />

            <Switch
                android:checked="true"
                android:theme="@style/CustomAppTheme"
                android:id="@+id/remember_me_switch_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fieldVerificationCode"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"
                android:switchPadding="16dp"
                android:text="@string/remember_me" />

            <Button
                android:id="@+id/send_code_confirm_btn_login"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_below="@id/remember_me_switch_login"
                android:layout_marginTop="16dp"
                android:background="@color/blue"
                android:text="@string/send_code"
                android:textColor="@color/white" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_info"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/auth_card"
        app:layout_constraintStart_toStartOf="@id/auth_card"
        app:layout_constraintTop_toBottomOf="@id/auth_card" />


    <TextView
        android:visibility="invisible"
        android:id="@+id/buttonResend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/resend_sms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/count_down_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="59 секунд"
        app:layout_constraintEnd_toEndOf="@id/auth_card"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>