<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateMultiListActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="184dp"
        android:background="@drawable/top_blue_bg"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingTop="?actionBarSize"
        android:src="@drawable/ic_back_chevron_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_iv_create_multilist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:paddingTop="?actionBarSize"
        android:src="@drawable/ic_share_22_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/name_et_multilist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:hint="@string/name_of_multilist"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/back_iv_create_multilist" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_holder_create_multilist"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/name_et_multilist">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical">

            <FrameLayout
                android:id="@+id/round_holder_fl"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:background="@drawable/round_with_blue_stroke">

                <ImageView
                    android:id="@+id/category_icon_multi_list"
                    android:layout_width="26dp"
                    android:layout_height="27dp"
                    android:layout_gravity="center"
                    android:src="@drawable/celeb" />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/color_ll_multi_list"
                android:layout_marginEnd="16dp"
                android:layout_alignParentEnd="true"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/fab"
                android:background="@drawable/round_with_blue_stroke"
                android:orientation="horizontal" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/creating_multilist_hint"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/create_btn_create_multilist"
        app:layout_constraintTop_toBottomOf="@id/card_holder_create_multilist" />

    <Button
        android:id="@+id/create_btn_create_multilist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_blue"
        android:text="@string/create"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>